--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
+        "@deveodk/vue-toastr": "^1.1.0",
         "axios": "^0.18",
         "axios-progress-bar": "^1.2.0",
         "cross-env": "^5.1",
@@ -21,6 +22,7 @@
         "sass": "^1.15.2",
         "sass-loader": "^7.1.0",
         "sweetalert2": "^8.18.0",
+        "toastr": "^2.1.4",
         "vue": "^2.5.17",
         "vue-loading-overlay": "^3.2.0",
         "vue-template-compiler": "^2.6.10"
