--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,7 @@
 {
-    "/compiled/js/dosen.js": "/compiled/js/dosen.js?id=ce7ee29a3b8ba74c42be",
+    "/compiled/js/dosen.js": "/compiled/js/dosen.js?id=e5e9efcc3232338a845c",
     "/compiled/js/manifest.js": "/compiled/js/manifest.js?id=f08a489f288113274884",
+    "/compiled/js/matkul.js": "/compiled/js/matkul.js?id=7e5b9cd3abbb054dcbb6",
     "/compiled/js/menu.js": "/compiled/js/menu.js?id=9cd7ca49310051a58c53",
-    "/compiled/js/vendor.js": "/compiled/js/vendor.js?id=ddb2714c1bc1ac8aed49"
+    "/compiled/js/vendor.js": "/compiled/js/vendor.js?id=c8bf8bbea67db871e314"
 }
