--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,7 +1,8 @@
 {
-    "/compiled/js/dosen.js": "/compiled/js/dosen.js?id=f50d17ad26f5f4c23f4b",
+    "/compiled/js/dosen.js": "/compiled/js/dosen.js?id=ff4f15ec9bda2e92df23",
+    "/compiled/js/jadwal.js": "/compiled/js/jadwal.js?id=6280296b4b683c2e5d8c",
     "/compiled/js/manifest.js": "/compiled/js/manifest.js?id=f08a489f288113274884",
-    "/compiled/js/matkul.js": "/compiled/js/matkul.js?id=e73894b65ddedacf9cbe",
-    "/compiled/js/menu.js": "/compiled/js/menu.js?id=9cd7ca49310051a58c53",
-    "/compiled/js/vendor.js": "/compiled/js/vendor.js?id=c8bf8bbea67db871e314"
+    "/compiled/js/matkul.js": "/compiled/js/matkul.js?id=34fb5f14b0a6537ed5da",
+    "/compiled/js/menu.js": "/compiled/js/menu.js?id=61f094772f277e13b47a",
+    "/compiled/js/vendor.js": "/compiled/js/vendor.js?id=33a2725db8d68bbdb4d4"
 }
