--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "toastr": "^2.1.4",
         "vue": "^2.5.17",
         "vue-loading-overlay": "^3.2.0",
+        "vue-select": "^3.2.0",
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {}
