--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,9 +1,10 @@
 {
     "/compiled/js/dosen.js": "/compiled/js/dosen.js?id=ff4f15ec9bda2e92df23",
     "/compiled/js/jadwal.js": "/compiled/js/jadwal.js?id=4087f63a9f8a47e4ec71",
+    "/compiled/js/jadwalaktif.js": "/compiled/js/jadwalaktif.js?id=f22f9e767f00c471b6d6",
     "/compiled/js/mahasiswa.js": "/compiled/js/mahasiswa.js?id=6e8905d94e0d3148efe3",
     "/compiled/js/manifest.js": "/compiled/js/manifest.js?id=f08a489f288113274884",
     "/compiled/js/matkul.js": "/compiled/js/matkul.js?id=34fb5f14b0a6537ed5da",
     "/compiled/js/menu.js": "/compiled/js/menu.js?id=61f094772f277e13b47a",
-    "/compiled/js/vendor.js": "/compiled/js/vendor.js?id=a3ffa36929d7784779cf"
+    "/compiled/js/vendor.js": "/compiled/js/vendor.js?id=c9b28977f96ea8fc0ee2"
 }
